--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,23 @@ apiVersion: v1
 entries:
   secrets-store-csi-driver:
   - apiVersion: v2
+    appVersion: 1.4.5
+    created: "2024-08-26T13:32:28.568582113Z"
+    description: A Helm chart to install the SecretsStore CSI Driver inside a Kubernetes
+      cluster.
+    digest: d03da1935ef0d54695c9d0bf297107fad5ee2f791265a786d3602e4a225353b8
+    icon: https://github.com/kubernetes/kubernetes/blob/master/logo/logo.png
+    kubeVersion: '>=1.16.0-0'
+    maintainers:
+    - email: ritazh@microsoft.com
+      name: Rita Zhang
+    name: secrets-store-csi-driver
+    sources:
+    - https://github.com/kubernetes-sigs/secrets-store-csi-driver
+    urls:
+    - https://nova-platform-io.github.io/secrets-store-csi-driver/charts/secrets-store-csi-driver-1.4.5.tgz
+    version: 1.4.5
+  - apiVersion: v2
     appVersion: 1.4.4
     created: "2024-07-18T08:42:26.196986524Z"
     description: A Helm chart to install the SecretsStore CSI Driver inside a Kubernetes
@@ -681,4 +698,4 @@ entries:
     urls:
     - https://kubernetes-sigs.github.io/secrets-store-csi-driver/charts/secrets-store-csi-driver-0.0.9.tgz
     version: 0.0.9
-generated: "2024-07-18T08:42:26.194857016Z"
+generated: "2024-08-26T13:32:28.567237106Z"
